# IniManager

./: CMakeLists.txt  IniFIle.cpp  IniFIle.h  IniFile.cpp  IniFile.h  config.ini  main.cpp
iniFiles/: test.ini  test_add_section.ini  test_delete_key.ini  test_delete_section.ini  test_get_set.ini  test_has_key.ini  test_has_section.ini
test/: CMakeLists.txt  IniFileFixture.cpp  IniFileTest.cpp  config.ini  new_test.ini  test.ini  test_add_section.ini  test_comments.ini  test_comments_modified.ini  test_delete_key.ini  test_delete_key_all_deleted.ini  test_delete_key_specific_deleted.ini  test_delete_section.ini  test_get_set.ini  test_has_section.ini
